# RustBenchmark

simple_bench/: Cargo.toml
simple_bench/benches/: criterion.rs  simple_get.rs
simple_bench/src/: lib.rs
